# sc-rpi

./: .gitignore  README.md  config.ini  pyproject.toml  requirements.txt  run_server.py
doc/: SCP_Protocol.md  circuit.md  commands.md  configurations.md  development.md  network_configuration.md  poetry.md  protocol.md  required_linux_dependencies.md  service_configuration.md  systemd_configuration.md  virtual_environments.md
lib/RPi.GPIO/: pyproject.toml
lib/RPi.GPIO/RPi/: GPIO.py
lib/rpi-ws281x/: pyproject.toml  rpi_ws281x.py
lib/systemd-python/: pyproject.toml
lib/systemd-python/systemd/: journal.py
scripts/: test.py  upload.sh
src/: command.py  config.py  controller.py  enums.py  errors.py  hardware_controller.py  helpers.py  main.py  network.py  response.py  utils.py  zeroconf_publisher.py
src/commands/: disconnect.py  edit_section.py  new_section.py  remove_sections.py  reset.py  section_add.py  section_edit.py  section_remove.py  set_color.py  status.py  turn_off.py  turn_on.py
src/error/: __init__.py  already_off.py  already_on.py  execution_error.py  overlapping.py  parse_error.py  validation_error.py
src/errors/: __init__.py  errors.py
src/test/: test_controller.py
test/: test_controller.py
