[tool.poetry]
name = "sc-rpi"
version = "0.1.0"
description = "A project to controle W2812B led strips with Raspberry Pi"
authors = ["Bruno Piaggio <brunopiaggiok@gmail.com>"]
readme = "README.md"
packages = [{include = "./src"}]

[tool.poetry.dependencies]
python = "3.8.18"
jsonschema = "4.21.1"
inflector = "3.1.1"
webcolors = "1.13"

[tool.poetry.group.dev.dependencies]
rpi-ws281x = {path = "lib/rpi-ws281x", develop = true}

[tool.poetry.group.rpi_ws281x.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
