[tool.poetry]
name = "RPi.GPIO"
version = "0.1.0"
description = ""
authors = ["Bruno Piaggio <brunopiaggiok@gmail.com>"]
readme = "README.md"
packages = [{include="../"}]

[tool.poetry.dependencies]
python = "3.8.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
